# advanced-hello-world

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.github/workflows/: cmake.yml  ubuntu-latest.yml  windows-latest.yml
cmake/: check_platform.cmake  cleaner.cmake  code_quality.cmake  get_github_release_version.cmake
lib/: CMakeLists.txt
lib/include/: hello.hpp
lib/src/: hello.cpp  hello.cxx
src/: CMakeLists.txt  main.cpp  main.cxx  main.hpp
test/: CMakeLists.txt  cout_redirection.cxx  cout_system.cxx  library_integration.cpp  library_integration.cxx  test-cout.cxx  test_cout.cxx  test_cout_ostringstream.cxx  test_src.cxx  wow.cpp
